force-app/main/default/objects/Rate_Class__c/Rate_Class__c.object-meta.xml
<CustomObject>
    <description>This object stores utility rate class information. It&apos;s different from NMC Tariffs.</description>
    <label>Rate Class</label>
    <nameField>
        <label>Rate Class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rate Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>