force-app/main/default/objects/Rate_Class__c/fields/EDI_Rate_Class__c.field-meta.xml
<CustomField>
    <fullName>EDI_Rate_Class__c</fullName>
    <description>Used by the UtilityDataRequestService to populate the &quot;Rate Class&quot; lookup on a Utility Data Request Period, where this field matches the &quot;Rate Class&quot; text field on the Utility Data Request Period.</description>
    <inlineHelpText>Used by the UtilityDataRequestService to populate the &quot;Rate Class&quot; lookup on a Utility Data Request Period, where this field matches the &quot;Rate Class&quot; text field on the Utility Data Request Period.</inlineHelpText>
    <label>EDI Rate Class</label>
    <length>50</length>
    <type>Text</type>
</CustomField>