force-app/main/default/objects/Rate_Class__c/fields/LDC_Rate_Class__c.field-meta.xml
<CustomField>
    <fullName>LDC_Rate_Class__c</fullName>
    <inlineHelpText>Used in the EDI integration as part of the unique identifier for rate classes</inlineHelpText>
    <label>LDC Rate Class</label>
    <length>50</length>
    <type>Text</type>
</CustomField>