force-app/main/default/objects/Rate_Class__c/fields/LDC_Rate_Subclass__c.field-meta.xml
<CustomField>
    <fullName>LDC_Rate_Subclass__c</fullName>
    <inlineHelpText>Used in the EDI integration as a part of the unique identifier for rate classes</inlineHelpText>
    <label>LDC Rate Subclass</label>
    <length>10</length>
    <type>Text</type>
</CustomField>