force-app/main/default/objects/Rate_Class__c/fields/Suppress_Disclosure_Form__c.field-meta.xml
<CustomField>
    <fullName>Suppress_Disclosure_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suppress Disclosure Form</label>
    <type>Checkbox</type>
</CustomField>