force-app/main/default/objects/Rate_Class__c/fields/Utility__c.field-meta.xml
<CustomField>
    <fullName>Utility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The utility that the rate class is for.</description>
    <inlineHelpText>The utility that the rate class is for.</inlineHelpText>
    <label>Utility</label>
    <referenceTo>Utility__c</referenceTo>
    <relationshipLabel>Rate Classes</relationshipLabel>
    <relationshipName>Rate_Classes</relationshipName>
    <type>Lookup</type>
</CustomField>