force-app/main/default/objects/Rate_Class__c/fields/Utility_NMC_Tariff__c.field-meta.xml
<CustomField>
    <fullName>Utility_NMC_Tariff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sizing Method</label>
    <referenceTo>Utility_NMC_Tariff__c</referenceTo>
    <relationshipLabel>Rate Classes</relationshipLabel>
    <relationshipName>Rate_Classes</relationshipName>
    <type>Lookup</type>
</CustomField>